changed landrover to landrover.uk in header.php added min -height to homepage's ajax-page wrapper, to avoid  scrollbar issues

--- a/css/scss/_layout.scss
+++ b/css/scss/_layout.scss
@@ -257,6 +257,12 @@ body {
    ========================================================================== */
 
 #index {
+
+	#ajax-page {
+	  	min-height: 295px; 
+		height:auto !important; 
+		height: 295px; 
+	}
 	
 }
 
